--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@thirdweb-dev/react": "^3.14.15",
+    "axios": "^1.4.0",
+    "ethers": "5.7",
+    "framer-motion": "^10.12.21",
     "next": "13.4.10",
-    "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "web3modal": "^1.9.12"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3"
   }
 }
