--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.11.0",
     "@thirdweb-dev/react": "^3.14.15",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "ethers": "5.7",
     "framer-motion": "^10.12.21",
     "next": "13.4.10",
+    "nft.storage": "^7.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "web3modal": "^1.9.12"
