--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next": "13.4.10",
     "nft.storage": "^7.1.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "web3modal": "^1.9.12"
