--- a/smartcontracts/package.json
+++ b/smartcontracts/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "hardhat": "^2.17.0"
   },
   "dependencies": {
